cicd/kubernetes/portanizer-data.yaml
apiVersion: v1
kind: Service
metadata:
  name: portanizer-data
  labels:
    app: portanizer-data
  namespace: internal-apps
spec:
  ports:
    - port: 5432
  selector:
    app: portanizer-data

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portanizer-data
  namespace: internal-apps
spec:
  selector:
    matchLabels:
      app: portanizer-data
  replicas: 1
  template:
    metadata:
      labels:
        app: portanizer-data
    spec:
      containers:
        - name: portanizer-data
          image: postgres:9.6-alpine
          ports:
            - name: postgres-port
              containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data/

      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data-pv-claim
