cicd/kubernetes/portanizer.yaml
apiVersion: v1
kind: Service
metadata:
  name: portanizer
  labels:
    app: portanizer
  namespace: internal-apps
spec:
  ports:
    - port: 9000

  selector:
    app: portanizer
        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portanizer
  namespace: internal-apps
spec:
  selector:
    matchLabels:
      app: portanizer
  replicas: 1
  template:
    metadata:
      labels:
        app: portanizer
    spec:
      containers:
        - name: portanizer
          image: dimdiden/portanizer-arm
          command: ["./entrypoint-prod.sh", "gunicorn"]
          args: ["--workers", "2", "--threads=4", "--worker-tmp-dir", "/dev/shm", "--log-level", "info", "--log-file=-", "portanizer.wsgi:application", "--bind", "0.0.0.0:9000"]
          ports:
            - name: http-port
              containerPort: 9000
